--- a/SwipeShop/client/src/styles/login.css
+++ b/SwipeShop/client/src/styles/login.css
@@ -3,7 +3,6 @@
 }
 
 .spread {
-    padding-top: 30%;
     width: 700%;
 }
 
@@ -13,24 +12,27 @@
 }
 
 table {
-    margin: 0 auto;
-    align-items: baseline;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: 0;
+    min-height: 150%;
     width: 100%;
-    height: 100%
+    margin: 0 auto;
 }
 
 .left-side {
     background-color: lightgray;
     padding-left: 1%;
+}
 
+.arrow {
+    transition-duration: 0.4s;
 }
 
 .arrow:hover {
     transition-duration: 1s;
     padding-inline-start: 50%;
+}
+
+
+.login-wrap {
+    height: 100%;
 }
